añado javascript a ejemplo1.html

--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -1,5 +1,8 @@
 <html>
+	<script src="js/codigo.js"></script>
 <body>
 <p> negro </p>
+<p>Hola, Es jueves</p>
+<input type="button" onClick="saludo()" value="saludo"></input>
 </body>
 </html>
