--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -1,5 +1,6 @@
 <html>
 	<script src="js/codigo.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/estilo.css"/>
 <body>
 <p> negro </p>
 <p>Hola, Es jueves</p>
